# the-island

./: .env.example  .gitignore  .gitmessage  .makerc  .mcp.json  .ruff.toml  AUDIT_LOGGING_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTORY_TREE.txt  DOCUMENTATION_REORGANIZATION_COMPLETE.md  DOWNLOAD_COMMANDS.md  DOWNLOAD_SYSTEM_SUMMARY.md  MAKEFILE_DELIVERY.md  MAKEFILE_FILES.txt  MAKEFILE_QUICKSTART.md  MAKEFILE_SUMMARY.md  Makefile  NGROK_SETUP.md  ORGANIZATION_SUMMARY.md  QUICK_START_COMMANDS.sh  QUICK_START_SUGGESTIONS.md  README.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  SECURITY.md  SESSION_RESUME.md  SUGGESTIONS_README.md  SYSTEM_SUMMARY.md  VERSION_UPDATE_SUMMARY.md  ecosystem.config.js  linting_report.txt  pydantic_validation_errors.json  pyproject.toml  requirements.txt  run.sh  start_ngrok.sh  start_server.sh  test_nav_buttons.js  (+5 more)
.claude/: mcp.local.json
.claude-mpm/: PM_INSTRUCTIONS.md  config.json  mcp_auto_config_preference.json
.github/: SECURITY-QUICK-REFERENCE.md  dependabot.yml
.kuzu-memory-backups/: CLAUDE.md.backup_20251116_221747  CLAUDE.md.backup_20251120_091830  config.yaml.backup_20251120_091830  settings.local.json.backup_20251120_091830
.mcp-vector-search/: chroma.sqlite3  config.json
completions/: _epstein-cli  epstein-cli.bash  epstein-cli.fish
config/: canonicalization_rules.yaml  source_definitions.yaml
data/: DATA_ORGANIZATION.md  README.md  entities.yaml  temp_import_nov25_dec6_errors.json
docs/: 1M-184-BIO-ENRICHMENT-PLAN.md  ABOUT.md  API_FIXES_SUMMARY.md  BACKEND_ENTITY_ID_MIGRATION.md  BIOGRAPHICAL_DATA_MAPPING.md  BIOGRAPHY_FILTER_API.md  BIOGRAPHY_FILTER_BEFORE_AFTER.md  BIOGRAPHY_IMPORT_SUCCESS.md  CANONICALIZATION_README.md  CANONICALIZATION_SYSTEM_DESIGN.md  CHATBOT_KNOWLEDGE_SYSTEM.md  CHAT_FIX_DEPLOYMENT_SUMMARY.md  CHROMADB_HYBRID_SEARCH.md  COMPREHENSIVE_EPSTEIN_DOCUMENT_SOURCES.md  CONVERSION_REPORT.md  DEDUPLICATION_SYSTEM.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  DIRECT_ACCESS_URLS.md  DOCUMENT_INDEXING_ACTION_PLAN.md  DOCUMENT_INDEXING_FINAL_ANALYSIS.md  DOCUMENT_INDEXING_INVESTIGATION_RESULTS.md  DOCUMENT_VIEWABILITY_ANALYSIS.md  ENRICHMENT_QUICKSTART.md  ENTITY_BIOGRAPHY_ENHANCEMENT_SYSTEM.md  ENTITY_COVERAGE_ANALYSIS.md  ENTITY_ENRICHMENT.md  ENTITY_FILTERING_IMPLEMENTATION.md  ENTITY_ID_API_REFERENCE.md  ENTITY_ID_MIGRATION_INDEX.md  ENTITY_ID_MIGRATION_PLAN.md  ENTITY_ID_MIGRATION_QA_SUMMARY.md  ENTITY_ID_MIGRATION_SUMMARY.md  ENTITY_ID_SCHEMA.md  ENTITY_IMPORT_ACTION_PLAN.md  EXECUTIVE_SUMMARY.md  FLIGHTS_MAP_UI_FIXES_SUMMARY.md  FLIGHTS_PAGE_FIXED.md  FRONTEND_MANAGEMENT_SUMMARY.md  (+52 more)
frontend/: BIOGRAPHY_BUG_FIX_1M-108.md  CHAT_PAGE_QA_ATTRIBUTES.md  CHAT_PAGE_TEST_REPORT.md  CHAT_SEARCH_TEST_SUMMARY.md  CHAT_SEARCH_UAT_REPORT.md  CHAT_SIDEBAR_IMPLEMENTATION.md  CHAT_SIDEBAR_QUICK_REF.md  CHAT_SIDEBAR_TESTING_GUIDE.md  CHAT_SIDEBAR_VISUAL_COMPARISON.md  CHAT_TRANSFORMATION_SUMMARY.md  GLOBAL_CHAT_IMPLEMENTATION.md  HOME_PAGE_BEFORE_AFTER.md  MATRIX_VISUALIZATION.md  NETWORK_GRAPH_IMPLEMENTATION.md  NETWORK_GRAPH_QUICK_REFERENCE.md  NETWORK_GRAPH_README.md  NETWORK_GRAPH_SUMMARY.md  NETWORK_GRAPH_TESTING_GUIDE.md  NETWORK_GRAPH_VISUAL_GUIDE.md  NEWS_FEATURE_ARCHITECTURE.md  NEWS_FEATURE_COMPLETE.md  NEWS_FEATURE_DELIVERABLES.md  NEWS_FEATURE_QUICK_START.md  NEWS_FEATURE_README.md  NEWS_FEATURE_SUMMARY.md  NEWS_FEATURE_VISUAL_GUIDE.md  QUICK_START.md  SHADCN_CONFIGURATION_COMPLETE.md  TEST_SUMMARY.md  UAT_REPORT.md  VERIFY_HOME_RECENT_ACTIVITY.md  demo-bio-filter.md  epstein_qa_test.cjs  index.html  package-lock.json  package.json  playwright.config.ts  test-home.html  test_chat_search.spec.js  test_results.json  (+2 more)
kuzu-memories/: README.md  git_sync_state.json  memories.db  project_info.md
scripts/: CANONICAL_SCRIPTS.md  DEVOPS_README.md  MERGE_ENTITY_DOCUMENTS_README.md  MIGRATION_GUIDE.md  README.md  add_doc_summaries.py  add_entity_guids.py  add_entity_uuids.py  bump_version.py  check_download_status.sh  deduplicate_entities.py  demo-workflow.sh  deploy.sh  detect_entity_conflation.py  dev-backend.sh  dev-frontend.sh  dev-logs.sh  dev-start.sh  dev-status.sh  dev-stop.sh  download_documentcloud.sh  download_fbi_vault.sh  download_house_oversight_sept2024.sh  download_internet_archive.sh  expand_news_database.py  generate_docs_index.py  git_commit_helper.py  guid_integration_examples.py  health-check.sh  lookup_entity_by_guid.py  merge_entity_documents.py  migrate_news_entity_ids.py  ngrok_dashboard.sh  ngrok_manager.sh  ngrok_persistent.sh  ngrok_quickref.sh  parallel_downloads_master.sh  pre_release.sh  reorganize_data.py  start_public_access.sh  (+7 more)
server/: .credentials  AUTHENTICATION_IMPLEMENTATION.md  ENTITY_BIO_FIX.md  (+16 more)
(+111242 files in other folders)
